--- a/scss/mixins/_lists.scss
+++ b/scss/mixins/_lists.scss
@@ -8,11 +8,13 @@
 
 // List context color
 @mixin list-item-variant($state, $bg, $color, $border, $hover-bg, $hover-color, $hover-border) {
-    .list-item-action.list-item-#{$state} {
-        @include hover-focus {
-            color: $hover-color;
-            background-color: $hover-bg;
-            border-color: $hover-border;
+    @if $enable-list-item-action {
+        .list-item-action.list-item-#{$state} {
+            @include hover-focus {
+                color: $hover-color;
+                background-color: $hover-bg;
+                border-color: $hover-border;
+            }
         }
     }
 
